--- a/src/style.css
+++ b/src/style.css
@@ -490,6 +490,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 10000;
   display: flex;
   align-items: center;
   justify-content: center;
