--- a/src/style.css
+++ b/src/style.css
@@ -882,6 +882,26 @@ input:checked+.toggle-slider:before {
   rotate: 90deg;
 }
 
+#reload-spinner {
+  display: none;
+  position: absolute;
+  bottom: 125px;
+  left: 314px;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite, warning-pulse 1s infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes warning-pulse {
   0% {
     opacity: 1;
